--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -32,7 +32,7 @@
   height: 100%;
   border-radius: 6px;
   opacity: 0;
-  z-index: 2;
+  z-index: 0;
 }
 
 .movies-card__overlay:hover {
